<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="addhabit">Next Goal</string>
    <string name="already">Already\nhave an\nAccount</string>
    <string name="login">New user? Register Now</string>
    <string name="stepwithus">Here’s\nyour first\nstep with \nus! </string>
    <string name="Loginbutton">Login</string>
    <string name="Register">Register</string>
    <string name="mobileNoWarnig">Mobile No</string>

    <string name="login_email_hint">Email</string>

    <string name="descritiondailyhabit">Enetr Description</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirmpassword_hint">confirmPassword</string>
    <string name="button_ok">OK\n</string>
    <string name="loading">Loading...</string>
    <string name="emailWarning">Email is Required</string>
    <string name="nameWarning">Name is Required</string>
    <string name="mobileNoWarning">Mobile No is required</string>
    <string name="passwardwarning">Passward is Required</string>
    <string name="internet_connection_failed">No internet Connection Found</string>
    <string name="shr_filter_title1">Filter</string>
    <string name="shr_filter_title2">chat</string>
    <string name="shr_filter_title3">manu</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_search_title2">Search2</string>

    <!--for facebook login-->

    <!--facebook login ends-->

    <!--error messages-->
    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="inconplete">Incomplete</string>
    <string name="complete">Complete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus">+</string>
    <string name="notification">Notification</string>
    <string name="select_end_date">Select End Date</string>
    <string name="end_date">End Date</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="enter_description">Enter Description</string>
    <string name="habit_goal">Habit Goal</string>
    <string name="count">count\n</string>
    <string name="title">Title</string>
    <string name="enternotes">Enter Notes \n</string>
    <string name="Nonotes">No Notes</string>
    <string name="createnotes">Create a Notes By Tapping the compose Button</string>
    <string name="NewRewards">New Rewards</string>
    <string name="NewNotess">New Notes</string>
    <string name="creatsrewads">Creates a Rewarsds By Tapping the compose buttons</string>
    <string name="Noreward">No Rewards</string>
    <string name="password_mismatch_warning">confirmpassward and passwaed id not matched\n</string>


</resources>