<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:icon="@drawable/shr_branded_menu"
        android:title="@string/shr_search_title"

        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/shr_branded_menu"
        android:title="@string/shr_filter_title1"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/filter2"
        android:icon="@drawable/shr_branded_menu"
        android:title="@string/shr_filter_title2"

        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/filter3"
        android:icon="@drawable/shr_branded_menu"
        android:title="@string/shr_filter_title3"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>
