<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTextColor"
    tools:context=".fragmnet.NotesFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true">

        <TextView
            android:id="@+id/noNotesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nonotes"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:clickable="false"></TextView>

        <TextView
            android:id="@+id/createNotesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createnotes"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:clickable="false"></TextView>

        <TextView
            android:id="@+id/newNotesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewNotess"
            android:textAlignment="center"

            android:textSize="15dp"
            android:textColor="@color/colorAccent"
            android:clickable="false"></TextView>

    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/recyclerfornotes"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabnotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_add_24"
        android:backgroundTint="@color/colorAccent"
        />
</FrameLayout>