<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/whiteTextColor"
    tools:context=".fragmnet.RewardFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true">


        <TextView
            android:id="@+id/noRewardsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Noreward"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:clickable="false"></TextView>

        <TextView
            android:id="@+id/createrewardsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creatsrewads"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:clickable="false"></TextView>

        <TextView
            android:id="@+id/newRewardsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewRewards"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/colorAccent"
            android:clickable="false"></TextView>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/recyclerforrewrds"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_add_24"
        android:backgroundTint="@color/colorAccent"
        />



</FrameLayout>