<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whiteTextColor"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/whiteTextColor"
        android:orientation="vertical"
        android:visibility="gone">

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:background="@color/colorPrimary" />-->

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:text="September 15, 2018"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:targetApi="jelly_bean" />

    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/habit_row_bg"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="65dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_centerVertical="true"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/view_background"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
            >

                <ImageView
                    android:id="@+id/delete_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/incomplete_icon"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/inconplete"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_background2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center_vertical|end"
                android:background="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/complete"
                    android:textColor="#fff"
                    android:textSize="13sp"
                    android:layout_marginEnd="10dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/complete_icon"
                    android:contentDescription="@string/app_name"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_foreground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteTextColor"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingBottom="10dp">

            <LinearLayout

                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"

                android:orientation="horizontal">

                <ImageView

                    android:id="@+id/thumbnail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="top"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo_transparent"
                    android:contentDescription="@string/app_name"
                    android:layout_marginEnd="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            style="@style/TextAppearance.Material3.TitleMedium"
                           android:textColor="@color/black"
                            android:text="@string/app_name"
                            android:layout_marginRight="70dp"
                            android:layout_marginEnd="70dp"
                            />

                        <LinearLayout
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-65dp"
                            android:gravity="center_vertical|end"
                            android:orientation="horizontal"
                            android:layout_marginStart="-65dp"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/star_icon"
                                android:contentDescription="@string/app_name" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/streek"
                                style="@style/TextAppearance.Material3.TitleMedium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="10"
                                android:layout_marginLeft="5dp"

                                android:textColor="@color/black"
                                android:layout_marginStart="5dp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:id="@+id/weekdays"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:baselineAligned="false">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/monday_text"
                                android:layout_width="20dp"
                                style="@style/TextAppearance.Material3.TitleMedium"
                                android:layout_height="20dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:textSize="12sp"
                                android:text="M"
                                android:textColor="@color/whiteTextColor"
                                android:background="@drawable/week_incomplete_round_bg"
                                android:gravity="center" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tuesday_text"
                                android:layout_width="20dp"
                                style="@style/TextAppearance.Material3.TitleMedium"
                                android:layout_height="20dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:textSize="12sp"
                                android:text="T"
                                android:textColor="@color/colorPrimary"
                                android:fontFamily="sans-serif-medium"
                                android:background="@drawable/week_default_round_bg"
                                android:gravity="center"
                               />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/wednesday_text"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                style="@style/TextAppearance.Material3.TitleMedium"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:textSize="12sp"
                                android:text="W"
                                android:textColor="@color/colorPrimary"

                                android:background="@drawable/week_default_round_bg"
                                android:gravity="center"
                                />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/thursday_text"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:textSize="12sp"
                                android:text="Th"
                                style="@style/TextAppearance.Material3.TitleMedium"
                                android:textColor="@color/colorPrimary"

                                android:background="@drawable/week_default_round_bg"
                                android:gravity="center"
                                />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/friday_text"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                style="@style/TextAppearance.Material3.TitleMedium"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:textSize="11sp"
                                android:text="F"
                                android:textColor="@color/colorPrimary"
                                android:fontFamily="sans-serif-medium"
                                android:background="@drawable/week_default_round_bg"
                                android:gravity="center"
                                />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/saturday_text"
                                android:layout_width="20dp"
                                style="@style/TextAppearance.Material3.TitleMedium"
                                android:layout_height="20dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:textSize="12sp"
                                android:text="S"
                                android:textColor="@color/whiteTextColor"
                                android:fontFamily="sans-serif-medium"
                                android:background="@drawable/week_inactive_round_bg"
                                android:gravity="center"
                                 />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/sunday_text"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                style="@style/TextAppearance.Material3.TitleMedium"
                                android:textSize="12sp"
                                android:text="S"
                                android:textColor="@color/whiteTextColor"
                                android:fontFamily="sans-serif-medium"
                                android:background="@drawable/week_complete_round_bg"
                                android:gravity="center"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:visibility="gone"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:src="@drawable/date_icon"
                                android:layout_marginRight="5dp"
                                android:contentDescription="@string/app_name"
                                android:layout_marginEnd="5dp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/due_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.Material3.TitleMedium"
                                android:gravity="center_vertical"
                                android:text="September 18, 2018"
                                android:fontFamily="sans-serif"
                                android:textSize="14sp"

                                android:textColor="@color/black"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical|end"
                            android:layout_marginLeft="10dp"
                            tools:ignore="UseCompoundDrawables"
                            android:layout_marginStart="10dp">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:src="@drawable/time_icon"
                                android:layout_marginRight="5dp"
                                android:contentDescription="@string/app_name"
                                android:layout_marginEnd="5dp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/due_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="5:30 am"
                                style="@style/TextAppearance.Material3.TitleMedium"

                                android:textSize="14sp"

                                android:textColor="@color/black"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>